change to fix menu "squashing", as found here: http://forum.pfsense.org/index.php/topic,10975.msg61023.html#msg61023
as suggested by user "itshuge"

ok on dev@ from Holger

--- a/usr/local/www/themes/metallic/all.css
+++ b/usr/local/www/themes/metallic/all.css
@@ -272,7 +272,7 @@ table#marquee div#container div#scroller {
 	position: relative;
 	top: -24px;
 	left: -4px;
-	width: 800px;
+	width: 802px;
 	padding: 0px;
 	height: 28px;
 	z-index: 3;
